<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DatabaseData"
    android:scrollbars="horizontal|vertical"    
	android:layout_marginTop="5dip"     
	android:scrollbarStyle="outsideInset"
	android:fillViewport="true" >
    
	  <HorizontalScrollView 
        android:id="@+id/horizontalView" 
        android:layout_height="wrap_content"     
        android:scrollbars="horizontal|vertical" 
        android:layout_width="wrap_content"     
        android:layout_marginTop="5dip"
        android:fillViewport="true">
        
  <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	
	
        
    	<Button 
    	    android:id="@+id/getDatabaseTimerTable"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"       
        	android:layout_centerHorizontal="true"
        	android:text="@string/getDatabaseTimerTable"
        	android:onClick="getDatabaseTimerTable"
        	android:padding="20dp"
    	    />
    	
    	<Button 
    	    android:id="@+id/getDatabaseUserTable"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"       
        	android:layout_centerHorizontal="true"
        	android:layout_below="@id/getDatabaseTimerTable"    
        	android:text="@string/getDatabaseUserTable"
        	android:onClick="getDatabaseUserTable"
        	android:padding="20dp"
    	    />
    	
    	
    
    	
    	
    	<TableLayout  
        android:id="@+id/tablelayoutUserProfileTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getDatabaseUserTable"     
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="20dp" 
        >   
        
        <TableRow
 		    android:padding="5dp">  
         <TextView     	    
    	    android:id="@+id/column1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/userID"
    	    />
         
           <TextView     	    
    	    android:id="@+id/column2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/emailid"
    	    />
           
            <TextView     	    
    	    android:id="@+id/column3"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/firstname"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column4"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/lastname"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column5"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/passwordhint"
    	    />
           
    	</TableRow>    
        
 		<TableRow
 		    android:padding="5dp" 	
        	>  
 		    
 		    <TextView     	    
    	    android:id="@+id/getData1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"	    
        	android:layout_span="5"
    	    />
 		    
 		 </TableRow>
 	</TableLayout>
 	
    	
    	<TableLayout  
        android:id="@+id/tablelayoutTimerTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tablelayoutUserProfileTable"     
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="20dp" 
        >   
        
        
 		<TableRow
 		    android:padding="5dp">  
         <TextView     	    
    	    android:id="@+id/column11"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_TIMERID"
    	    />
         
           <TextView     	    
    	    android:id="@+id/column21"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_USERID"
    	    />
           
            <TextView     	    
    	    android:id="@+id/column31"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_TIMERDATE"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column41"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_TASK"
    	    />
            
            <TextView     	    
    	    android:id="@+id/column51"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_STARTTIME"
    	    />
           
            <TextView     	    
    	    android:id="@+id/column61"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_STOPTIME"
    	    /><TextView     	    
    	    android:id="@+id/column71"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/KEY_TIMEDURATION"
    	    />
    	</TableRow>    
    	
 		<TableRow
 		    android:padding="5dp">  
 		    
 		    <TextView     	    
    	    android:id="@+id/getData11"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"	    
        	android:layout_span="5"
    	    />
 		    </TableRow>
 		    
    	</TableLayout>
    
    		
    	<Button 
    	    android:id="@+id/goBack"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"   
        	android:layout_below="@id/tablelayoutTimerTable"    
        	android:layout_centerHorizontal="true"
        	android:text="@string/back"
        	android:onClick="gotoHome"
        	android:padding="20dp"
    	    />


</RelativeLayout>
</HorizontalScrollView>
</ScrollView>