<menu xmlns:android="http://schemas.android.com/apk/res/android" >

       <item
        android:id="@+id/userprofile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/userprofile"/>
   
    <item
        android:id="@+id/statsactivity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/statsactivity"/>
    
  <!--  <item
        android:id="@+id/guide"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/guide"/>
        -->  

    <item
        android:id="@+id/logout_lable"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout_lable"/>    
</menu>
