
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerActivity" 
    android:background="#ffffff"
    >
     
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:visibility="visible" >

<RelativeLayout
    android:id="@+id/relativelayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingRight="10dp" >
    
        <ImageView
        android:id="@+id/apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/apptitle"
        android:paddingTop="10dp"
        android:visibility="gone" />
    
    <LinearLayout
        android:id="@+id/linearlayouttimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/apptitle"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        >
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerzero"
        android:textSize="50sp" 
        android:paddingTop="20dp"
        android:textColor="#B8B8B8"/>
    
    <TextView
        android:id="@+id/timerMs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerMs"
        android:textSize="30sp" 
        android:paddingTop="20dp"
        android:textColor="#B8B8B8"/>
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/relativelayoutbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayouttimer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:padding="10dp"
        >
    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="#FFFFFF"
        android:background="#53AEFF"
        android:text="@string/starttimer"
        android:onClick="startClick"
        />
    
     <ToggleButton
        android:id="@+id/pauseButton"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_below="@+id/startButton"
        android:textOn="@string/continuetimer"
        android:textOff="@string/pausetimer"
        android:layout_centerInParent="true"
        android:onClick="pauseClick"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:background="#53AEFF"
        />
    
    
    </RelativeLayout>
     
     <RelativeLayout
        android:id="@+id/relativelayoutbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativelayoutbutton1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >
    
    <Button
        android:id="@+id/stopButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/stoptimer"
        android:onClick="stopClick"
        android:visibility="gone"
        android:textColor="#B8B8B8"
        android:background="#475967"
        />
   
    <TextView
        android:id="@+id/timeDuration"
        android:layout_below="@id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerzero"
        android:padding="10dp"
        android:visibility="gone"
        android:textColor="#465967"
        />
    </RelativeLayout>
    
     
    <TableLayout
        android:id="@+id/tablelayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayoutbutton2"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp" 
        android:paddingBottom="20dp"
        android:paddingLeft="35dp"
        android:shrinkColumns="*"  
        android:stretchColumns="*" 
        android:visibility="gone"
        >
    
        <TextView
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/tip1"
            />
        
        <TextView
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/tip2"
            />
        
        <TextView
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/tip3"
            />
        
	</TableLayout>  
    
    
    <!--  <TableLayout
        android:id="@+id/tablelayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tablelayout1"
        android:paddingTop="20dp" 
        android:paddingBottom="20dp"
        android:shrinkColumns="*"  
        android:stretchColumns="*" 
        >
        
        <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            
        <Button            
        android:id="@+id/userprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userprofile"
        android:onClick="userprofile"
        />
        
        <Button            
        android:id="@+id/statsactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statsactivity"
        android:onClick="statsscreen"
        />
        
        </TableRow>
        
        <TableRow 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <Button            
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_lable"
        android:onClick="logout"
        />
        
        <Button            
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:onClick="guide"
        />
        
        </TableRow>
    </TableLayout>  -->

</RelativeLayout>			        
	
</ScrollView>

				    <ImageView
				        android:id="@+id/subMenu"
				        android:layout_width="wrap_content"
						android:layout_height="wrap_content"
				        android:onClick="openSubMenu" 
				        android:contentDescription="@string/subMenu"
				        android:src="@drawable/submenu"
		   	         	android:layout_alignParentRight="true"
		   	         	android:layout_alignParentBottom="true" /> 
</RelativeLayout>